Wed May 11 03:06:35 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rss.rb: Add documentation for RSS.  Patch by Steve Klabnik.
	  [Ruby 1.9 - Bug #4663]

Tue May 10 14:50:32 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb: Add option for hiding skip messages when test
	ends. #4657

	* test/testunit/test_hideskip.rb, test/testunit/test4test_hideskip.rb:
	test for above.

Tue May 10 10:53:04 2011  Eric Hodel  <drbrain@segment7.net>

	* common.mk (rdoc): Add rdoc-coverage rule

Tue May 10 09:13:21 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/webrick: Add Documentation

Tue May 10 04:22:09  Eric Hodel  <drbrain@segment7.net>

	* lib/webrick/log.rb: Hide copyright info from ri
	* lib/webrick/httpstatus.rb: ditto
	* lib/webrick/htmlutils.rb: ditto
	* lib/webrick/httpversion.rb: ditto
	* lib/webrick/version.rb: ditto
	* lib/webrick/httpauth/userdb.rb: ditto
	* lib/webrick/httpauth/authenticator.rb: ditto
	* lib/webrick/accesslog.rb: ditto

Mon May  9 20:57:13 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/ruby/test_{complex,rational}.rb: added tests.

Mon May  9 20:29:44 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (string_to_c_internal): a refactoring.

Mon May  9 18:33:05 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c: Improve documentation for String#start_with? and
	  String#end_with?. fixes #4652
	  patched by Andrew Grimm <andrew.j.grimm at gmail.com>

Mon May  9 13:49:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* complex.c (string_to_c_internal): support scientific notation.
	  patched by Tinco Andringa. https://github.com/ruby/ruby/pull/16
	  [ruby-core:36046][Bug #4655]

Mon May  9 11:52:48 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (int_ord): remove K&R style.
	  patched by Daehyub Kim. https://github.com/ruby/ruby/pull/17

Sun May  8 22:17:24 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/ruby/test_{complex2,complexrational}.rb: use skip.
	* test/date/*.rb: ditto.
