@@ -9,16 +9,42 @@
 
 module WEBrick
   module HTTPAuth
+
+    ##
+    # Module providing generic support for both Digest and Basic
+    # authentication schemes.
+
     module Authenticator
+
       RequestField      = "Authorization"
       ResponseField     = "WWW-Authenticate"
       ResponseInfoField = "Authentication-Info"
       AuthException     = HTTPStatus::Unauthorized
-      AuthScheme        = nil # must override by the derived class
 
-      attr_reader :realm, :userdb, :logger
+      ##
+      # Method of authentication, must be overriden by the including class
+
+      AuthScheme        = nil
+
+      ##
+      # The realm this authenticator covers
+
+      attr_reader :realm
+
+      ##
+      # The user database for this authenticator
+
+      attr_reader :userdb
+
+      ##
+      # The logger for this authenticator
+
+      attr_reader :logger
 
       private
+
+      ##
+      # Initializes the authenticator from +config+
 
       def check_init(config)
         [:UserDB, :Realm].each{|sym|
@@ -36,6 +62,9 @@ module WEBrick
         @auth_exception  = self::class::AuthException
         @auth_scheme     = self::class::AuthScheme
       end
+
+      ##
+      # Ensures +req+ has credentials that can be authenticated.
 
       def check_scheme(req)
         unless credentials = req[@request_field]
@@ -68,6 +97,10 @@ module WEBrick
         end
       end
     end
+
+    ##
+    # Module providing generic support for both Digest and Basic
+    # authentication schemes for proxies.
 
     module ProxyAuthenticator
       RequestField  = "Proxy-Authorization"
